Implement wordlist and class content API endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Vilingo
 
 # postgres配置
-spring.datasource.url=jdbc:postgresql://localhost:5432/Vilingo
-spring.datasource.username=postgres
-spring.datasource.password=postgrespass
+spring.datasource.url=jdbc:postgresql://pgm-uf68g4m12f4p0rcd8o.pg.rds.aliyuncs.com:5432/testDB
+spring.datasource.username=joeyxzy
+spring.datasource.password=Postgresqlpass2025
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA配置
@@ -12,6 +12,16 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Redis配置
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+# Aliyun OSS配置
+aliyun.oss.endpoint=oss-cn-shanghai.aliyuncs.com
+aliyun.oss.access-key-id=${aliyun.oss.access-key-id}
+aliyun.oss.access-key-secret=${aliyun.oss.access-key-secret}
+aliyun.oss.bucket-name=vilingo
+aliyun.oss.url-expire-minutes=60
+
+# 外部翻译API的配置 (有道智云)
+translation.youdao.api.url=https://openapi.youdao.com/api
+translation.youdao.api.app-key=44e54ee913260c68
+translation.youdao.api.app-secret=vCdYFZCjgyUfP9lBrToHvva0fdpNqY6b
+
+spring.profiles.active=local
